Fixed ios scroll bug and added ignore

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="assets/images/icon.png">
@@ -47,7 +47,7 @@
       </div>
     </nav>
 
-    <main role="main">
+    <main role="main" style="position:relative; overflow: hidden;">
       
       <img src="assets/images/app-preview.png" alt="" class="headerimg">
 
